[package]
name = "invest_bot_paid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
polars = "0.34.2"
pretty_env_logger = "0.5.0"
teloxide = "0.12.2"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }

[build]
